--- a/browser/index.html
+++ b/browser/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
     <title>Employee CRUD App</title>
-    <base href="/">
+    <base href="//GODSPE3D/CRUDEmployee">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style type="text/css">
